--- a/angular.json
+++ b/angular.json
@@ -4,8 +4,8 @@
   "newProjectRoot": "projects",
   "projects": {
     "Atrae": {
-      "root": "",
-      "sourceRoot": "src",
+      "root": "public/",
+      "sourceRoot": "public/src",
       "projectType": "application",
       "prefix": "app",
       "schematics": {
@@ -17,17 +17,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Atrae",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "outputPath": "public/dist",
+            "index": "public/src/index.html",
+            "main": "public/src/main.ts",
+            "polyfills": "public/src/polyfills.ts",
+            "tsConfig": "public/src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "public/src/favicon.ico",
+              "public/src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "public/src/styles.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -36,8 +36,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "public/src/environments/environment.ts",
+                  "with": "public/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -79,17 +79,17 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
+            "main": "public/src/test.ts",
+            "polyfills": "public/src/polyfills.ts",
+            "tsConfig": "public/src/tsconfig.spec.json",
+            "karmaConfig": "public/src/karma.conf.js",
             "styles": [
-              "src/styles.scss"
+              "public/src/styles.scss"
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "public/src/favicon.ico",
+              "public/src/assets"
             ]
           }
         },
@@ -97,8 +97,8 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "public/src/tsconfig.app.json",
+              "public/src/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -108,14 +108,14 @@
       }
     },
     "Atrae-e2e": {
-      "root": "e2e/",
+      "root": "public/e2e/",
       "projectType": "application",
       "prefix": "",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
+            "protractorConfig": "public/e2e/protractor.conf.js",
             "devServerTarget": "Atrae:serve"
           },
           "configurations": {
@@ -127,7 +127,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
+            "tsConfig": "public/e2e/tsconfig.e2e.json",
             "exclude": [
               "**/node_modules/**"
             ]
