--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "atrae",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "main": "server.js",
+  "author": "Kevin Aguilar",
+  "keywords": [
+    "NodeJS",
+    "MongoDB",
+    "ExpressJS",
+    "Angular",
+    "MEAN"
+  ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,7 +28,16 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bcrypt": "^3.0.5",
+    "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "gulp": "^4.0.0",
+    "mongoose": "^5.4.22",
+    "morgan": "^1.9.1",
+    "nodemailer": "^6.1.0",
+    "nodemon": "^1.18.10",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -29,10 +47,12 @@
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "gulp-exec": "^3.0.2",
+    "gulp-nodemon": "^2.4.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
