--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "ng": "ng",
-    "start": "gulp",
+    "start": "nodemon",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
