--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.12",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -43,6 +45,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
+    "hammerjs": "^2.0.8",
     "mongoose": "^5.4.22",
     "morgan": "^1.9.1",
     "nodemailer": "^6.1.0",
