--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "gulp-exec": "^3.0.2",
+    "gulp-ng-build": "0.0.3",
     "gulp-nodemon": "^2.4.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
