--- a/package.json
+++ b/package.json
@@ -1,86 +1,19 @@
 {
   "name": "atrae",
-  "version": "0.0.1",
-  "main": "server.js",
-  "author": "Kevin Aguilar",
-  "keywords": [
-    "NodeJS",
-    "MongoDB",
-    "ExpressJS",
-    "Angular",
-    "MEAN"
-  ],
+  "version": "1.0.0",
+  "description": "atraeBackEnd",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/KaguilarA/atrae.git"
   },
-  "engines": {
-    "node": "10.15.3",
-    "npm": "6.4.1"
+  "author": "Kevin Aguilar",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KaguilarA/atrae/issues"
   },
-  "homepage": "https://atrae.herokuapp.com/",
-  "scripts": {
-    "ng": "ng",
-    "start": "nodemon",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^7.2.12",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-brands-svg-icons": "^5.8.1",
-    "@fortawesome/free-regular-svg-icons": "^5.8.1",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
-    "bcrypt": "^3.0.5",
-    "body-parser": "^1.18.3",
-    "core-js": "^2.5.4",
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "gulp": "^4.0.0",
-    "hammerjs": "^2.0.8",
-    "mongoose": "^5.4.22",
-    "morgan": "^1.9.1",
-    "nodemailer": "^6.1.0",
-    "nodemon": "^1.18.10",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.8",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "gulp-exec": "^3.0.2",
-    "gulp-ng-build": "0.0.3",
-    "gulp-nodemon": "^2.4.2",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
-  }
+  "homepage": "https://github.com/KaguilarA/atrae#readme"
 }
